@@ -261,7 +261,7 @@ class Test(BaseTest):
                 message_key="message",
                 keys_under_root=True,
                 overwrite_keys=True,
-                add_error_key=True,
+                add_error_key=True
                 ),
             processors=[{
                 "drop_fields": {
@@ -305,7 +305,7 @@ class Test(BaseTest):
                 message_key="message",
                 keys_under_root=True,
                 overwrite_keys=True,
-                add_error_key=True,
+                add_error_key=True
                 ),
             processors=[{
                 "drop_fields": {
